--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>M Θ F Δ / design</title>
+    <title>M O F Δ / design</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -32,7 +32,7 @@
                 <p>Get notified when I release this course!</p>
 
                 <input type="text" name="email" id="email" placeholder="your email">
-                <button>Notify Me</button>
+                <button>Notify Me moddz</button>
 
                 <div class="attention">
                     <img src="images/me.jpg" alt="Moddz Avatar" class="me">
