--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <p>Get notified when I release this course!</p>
 
                 <input type="text" name="email" id="email" placeholder="your email">
-                <button>Notify Me moddz</button>
+                <button>Notify Me</button>
+                <a href="./tstest.html">tstest</a>
 
                 <div class="attention">
                     <img src="images/me.jpg" alt="Moddz Avatar" class="me">
