--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <input type="text" name="email" id="email" placeholder="your email">
                 <button>Notify Me</button>
-                <a href="./tstest.html">tstest</a>
+                <a href="./tstest.html">t</a>
 
                 <div class="attention">
                     <img src="images/me.jpg" alt="Moddz Avatar" class="me">
