--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>M ô F Δ / design</title>
+    <title>M õ F Δ / design</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
